# d2lut

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  CHANGELOG.md  Caddyfile.docker  D2R_Loot_Filter_Builder.spec  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  forum_urls.txt  forum_urls_part2.txt  forum_urls_part3.txt  next.config.mjs  package-lock.json  package.json  pyproject.toml  test_inventory_manual.py  worklog.md
.opencode/: pipeline.json
config/: additional_prices.yml  additional_unique_prices.yml  affix_database.yml  affix_database_complete.yml  affix_database_d2data.yml  base_potential.yml  comprehensive_prices.yml  expert_trade_seeds.d2r.minimal.json  extended_prices.yml  gg_affixes.yml  gg_affixes_llama.yml  lld_prices.yml  magic_affix_prices.yml  market.example.yaml  overlay.example.json  perfect_rolls.yml  rune_prices.yml  set_prices_complete.yml  static_prices.yml  unique_prices_complete.yml
d2lut/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
db/: custom.db
docs/: architecture.md  category_aware_market_weighting.md  chat-history-2026-03-01.md  chat_history_session_export.md  d2jsp_scraper_instructions.md  slang_integration.md  z.ai.md
download/: D2LUT_PUSH_INSTRUCTIONS.md
examples/: overlay_app_demo.py  stash_scan_demo.py  stash_scan_presentation_demo.py
mini-services/: bridge.py  collect_observations.py
output/: d2r_filter_audit.json  item-magic-combos.json  item-nameaffixes.json  item-names.colorpipe.json  item-names.e2e.json  item-names.json  item-names.test.json  item-runes.json
prisma/: schema.prisma  seed.ts
scripts/: audit_modifier_coverage.py  audit_tasks_vs_tests.py  backfill_source_urls.py  bootstrap_hybrid_context.sh  build_affix_lexicon.py  build_catalog_db.py  build_catalog_price_map.py  build_d2r_filter.py  build_exe.bat  build_exe.sh  build_market_db.py  build_overlay_server.bat  build_overlay_server.py  build_overlay_server.sh  calibrate_tooltip_rect.py  create_full_item_names.py  d2jsp_tampermonkey_scraper.user.js  detect_suspicious_rows.py  dev-server  diagnose_db_state.py  discover_maxroll_dropcalc_data.py  e2e-filter-api-check.sh  enqueue_topic_image_recovery.py  export_all_items_market_table_html.py  export_chrome_tab_html.py  export_d2planner_all_variants_html.py  export_d2planner_amulet_magic_combos_html.py  export_d2planner_modifiers_table_html.py  export_full_price_table_html.py  export_item_names_json.py  export_kpi_dashboard.py  export_market_dashboard.py  export_maxroll_d2planner_assets.py  export_price_table_html.py  export_property_price_table_html.py  export_sell_recommendations.py  export_valuation.py  extract_slang_candidates.py  fetch_and_inspect_topic_first_body_image.py  fetch_d2jsp_forum_pages.py  (+67 more)
tests/: conftest.py  test_audit_tasks_vs_tests.py  test_bundle_parser.py  (+80 more)
(+15964 files in other folders)
