[project]
name = "d2lut"
version = "0.2.3"
description = "D2R loot value pipeline using d2jsp fg market signals"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
overlay = [
    "pillow>=10.0.0",
    "mss>=9.0.0",
    "opencv-python>=4.8.0",
    "pytesseract>=0.3.10",
    "websockets>=12.0",
    "easyocr>=1.7.0",
]
scraper = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "ruff>=0.1.0",
    "pyinstaller>=6.0",
]
all = [
    "d2lut[overlay,scraper,ml,dev]",
]

[project.scripts]
d2lut-server = "d2lut.scripts.run_remote_overlay_server:main"
d2lut-build = "d2lut.scripts.build_overlay_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

